Behebung Fehler Doku 🐛

--- a/BILZ_MARKUS_solution.ipynb
+++ b/BILZ_MARKUS_solution.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "source": [
-    "Anwendung des LabelEncoders, um Strings in Integer für Verwendung in Modell zu konvertieren. Bspw. wird '0 = stable' encodiert."
+    "Anwendung des LabelEncoders, um Strings in Integer für Verwendung in Modell zu konvertieren. Bspw. wird 'unstable = 1' encodiert."
    ],
    "cell_type": "markdown",
    "metadata": {}
